k8s-local/leggy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leggy-application
  namespace: legy-local
  labels:
    app: leggy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leggy
  template:
    metadata:
      labels:
        app: leggy
    spec:
      containers:
        - name: leggy
          image: bramasquare/leggy-application:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "600m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 50
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
