k8s-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leggy-ingress
  namespace: legy-local
spec:
  ingressClassName: nginx
  rules:
    - host: leggy.local
      http:
        paths:
          - path: /actuator/health
            pathType: Prefix
            backend:
              service:
                name: leggy-service
                port:
                  number: 8080
